<resources>
    <string name="app_name">S<i>app</i></string>
    <string name="tensao_solo">Tensão do Solo - σ =</string>
    <string name="lado_a_do_pilar_ap">Maior lado do pilar - a<sub>p</sub> =</string>
    <string name="lado_b_do_pilar_bp">Menor lado do pilar - b<sub>p</sub> =</string>
    <string name="combrimento">Cobrimento adotado - c =</string>
    <string name="carga_pilar">Carga característica - N<sub>k</sub> =</string>
    <string name="fck_do_concreto"><i>fck</i> do concreto =</string>
    <string name="dimensionar">Dimensionar</string>
    <string name="possui_momento_fletor_aplicado">Possui momento fletor aplicado?        </string>
    <string name="momento_em_x">Momento em x [KNm]</string>
    <string name="momento_em_y">Momento em y [KNm]</string>
    <string name="tipo_de_aco">Tipo de aço</string>
    <string name="ca_50">CA - 50</string>
    <string name="ca_60">CA - 60</string>
    <string name="dados_de_entrada">Dados de entrada</string>
    <string name="resultados_centrada">Resultados</string>
    <string name="unidade_centimetro">cm</string>
    <string name="unidade_kn">KN</string>
    <string name="unidade_mpa">MPa</string>
    <string name="unidade_kpa_1">KPa</string>
    <string name="texto_area_de_aco_a">Área de aço A =</string>
    <string name="area_de_aco_b">Área de aço B =</string>
    <string name="bitola_da_barra">Bitola da barra</string>
    <string name="numero_de_barras">Número de barras</string>
    <string name="bitola_aco">Bitola</string>
    <string name="n_de_barras">Nº de barras</string>
    <string name="phi_10_mm">10 mm</string>
    <string name="phi_12_5_mm">12.5 mm</string>
    <string name="phi_16_mm">16 mm</string>
    <string name="phi_20_mm">20 mm</string>
    <string name="phi_25_mm">25 mm</string>
    <string name="phi_32_mm">32 mm</string>
    <string name="texto_espacamento">Espaçamento máx. [cm]</string>
    <string name="texto_armadura_do_pilar_mm"> Armadura do pilar [mm]</string>
    <string name="nao_passou_ceb">Valores incalculáveis pelo CEB- 70. Verificar em ajuda!</string>
    <string name="nao_passou_cisalhamento">Não passou no cisalhamento. Verificar em ajuda!</string>
    <string name="lado_ap_main">Maior lado do pilar - a<sub>p</sub> [cm]</string>
    <string name="lado_bp_main">Menor lado do pilar - b<sub>p</sub> [cm]</string>
    <string name="cobrimento_main">Cobrimento - c [cm]</string>
    <string name="nk_main">Carga característica - N<sub>k</sub> [KN]</string>
    <string name="fck_main">Fck do concreto [MPa]</string>
    <string name="tensao_solo_main">Tensão do solo [KPa]</string>
    <string name="phi_main">Φ</string>
    <string name="main_dimensionamento">Dimensionamento</string>
    <string name="welcome_bem_vindo">Bem-vindo ao S<i>app</i> a sua calculadora de sapatas! Para iniciar o dimensionamento aperte em começar!</string>
    <string name="comecar_button">Começar</string>
    <string name="recomendacao_espacamento">Espaçamento recomendado: 10 cm ≤ e ≤ 20 cm</string>
    <string name="versao">Versão 1.0.0</string>
    <string name="desenvolvido_jvsm">Desenvolvido por: João Victor Santos Monteiro</string>
    <string name="sapata_centrada_title">Sapata centrada</string>
    <string name="sapata_momento_fletor_title">Sapata com momento fletor</string>
    <string name="modelo_de_calculo">Ajuda</string>
    <string name="um_dúvidas"><b>1. Possíveis erros no dimensionamento</b></string>
    <string name="valores_ceb_incalculaveis"><i>1.1 Valores incalculáveis pelo CEB- 70</i></string>
    <string name="conteudo_ceb">Para que o método de dimensionamento de sapatas rígidas isoladas, proposto no Boletim nº 73 do CEB (1970), seja aplicado, o elemento de fundação deve obedecer à parâmetros geométricos pré-estabelecidos.\nAssim, o tamanho da aba do elemento de fundação (<i>c</i>) deve ser:</string>
    <string name="notacao_ceb">Em que:\n<i>h</i> – Altura da sapata;\n<i>c</i> – Comprimento do balanço da sapata</string>
    <string name="topico_cisalhamento"><i>1.2 Cisalhamento não passou</i></string>
    <string name="conteudo_cisalhamento">A NBR 6118 (ABNT, 2014) preconiza que deve ser feito uma verificação quanto à tensão resistente de compressão diagonal do concreto na superfície crítica C. A mesma norma afirma que a superfície crítica C é correspondente ao perímetro do pilar ou da carga centrada nele.\nPara tal verificação calcula-se a tensão de cisalhamento resistente do concreto, a qual deve ser superior à tensão de cisalhamento atuante na compressão diagonal. Assim tem-se:</string>
    <string name="notacao_cisalhamento">Onde:\n<i>V<sub>l</sub></i> – Força cortante no perímetro do pilar;\n<i>u<sub>p</sub></i> – Perímetro do pilar;\n<i>d</i> – Altura útil da sapata;\n<i>fck</i> – Resistência do concreto à compressão;\n<i>fcd = fck/1,4</i>.
</string>
    <string name="momento_projeto_a">M<sub>1a,d</sub> =</string>
    <string name="momento_projeto_b">M<sub>1b,d</sub> =</string>
    <string name="h_zero">h<sub>0</sub> =</string>
</resources>
